--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,106 @@ img {width:100%;}
 .minipic {clear:both;}
 
 .related-videos {clear:both;}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*PAGE TWO STYLING*/
+
+
+
+
+
+
+
+
+
+
