--- a/css/style.css
+++ b/css/style.css
@@ -111,9 +111,23 @@ h2 span{
 	font-size: 20px;
 	margin: 15px 0;
 }
-iframe{
-	width: 100%;
-	min-height: 600px;
+@media screen and (max-width: 767px){
+	iframe{
+		width: 100%;
+		height: 450px;
+	}
+}
+@media screen and (min-width: 768px) and (max-width: 1199px){
+	iframe{
+		width: 100%;
+		height: 435px;
+	}
+}
+@media screen and (min-width: 1200px){
+	iframe{
+		width: 100%;
+		height: 890px;
+	}
 }
 .comments-title{
 	margin-top: 20px;
